[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftlock"
version = "0.1.0"
description = "Lightweight LLM cost & token tracking middleware for OpenAI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openai", "llm", "cost", "tokens", "monitoring", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",       # for FastAPI test client
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["driftlock*"]

[tool.ruff]
line-length = 100
target-version = "py311"
