[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftlock"
version = "0.2.4"
description = "LLM cost governance and control layer — supports OpenAI, Anthropic, and more"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["openai", "anthropic", "llm", "cost", "policy", "governance", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/driftlock"
Repository = "https://github.com/your-org/driftlock"
"Bug Tracker" = "https://github.com/your-org/driftlock/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
fastapi = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
driftlock = "driftlock.cli:main"

[tool.setuptools.packages.find]
include = ["driftlock*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
